# linguistics.db

./: README.md  TODO  main.py  pyproject.toml  search_engine.tx  search_engine_examples.txt
linguistics_db/: app.py  command_line.py  create_database.py  query_language.py  syllabify.py
linguistics_db/templates/: base.html  site.html
