[tool.poetry]
name = "linguistics-db"
version = "0.1.0"
description = "A multitool for engaging in shenanigans with English and other languages."
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textx = "^3.0.0"
panphon = "^0.20.0"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
